--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14163,7 +14163,52 @@ a.text-dark:focus {
 }
 
 #hero {
+  padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+  display: flex;
+  align-items: center;
+  min-height: 600px;
+}
+
+#hero h1 {
+  font-family: "DM Sans", sans-serif;
+  text-align: center;
+  font-weight: bold;
+  font-size: 4rem;
+  padding-bottom: 1rem;
+}
+
+#hero .hero-cta {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#hero .hero-cta a:nth-child(1) {
+  font-family: "DM Sans", sans-serif;
+  color: #b8b8b8;
+  font-weight: bold;
+  padding: 0 1rem;
+  text-decoration: none;
+  padding: 0.75rem 1rem;
+  border: 1px solid #b8b8b8;
+  border-radius: 4px;
+  letter-spacing: 0.02rem;
+  margin: 0 0.5rem;
+}
+
+#hero .hero-cta a:nth-child(2) {
+  font-family: "DM Sans", sans-serif;
+  color: white;
+  font-weight: bold;
+  padding: 0 1rem;
+  text-decoration: none;
+  padding: 0.75rem 1rem;
+  background-color: black;
+  border: 1px solid black;
+  border-radius: 4px;
+  letter-spacing: 0.02rem;
+  margin: 0 0.5rem;
 }
 
 #hero .hero-slider {
