--- a/resources/sass/_storefront.scss
+++ b/resources/sass/_storefront.scss
@@ -1,6 +1,50 @@
 #hero {
-
+    padding-top: 2.5rem;
     padding-bottom: 2.5rem;
+    display: flex;
+    align-items: center;
+    min-height: 600px;
+
+    h1 {
+        font-family: 'DM Sans', sans-serif;
+        text-align: center;
+        font-weight: bold;
+        font-size: 4rem;
+        padding-bottom: 1rem;
+    }
+
+    .hero-cta {
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        a:nth-child(1) {
+            font-family: "DM Sans", sans-serif;
+            color: #b8b8b8;
+            font-weight: bold;
+            padding: 0 1rem;
+            text-decoration: none;
+            padding: 0.75rem 1rem;
+            border: 1px solid #b8b8b8;
+            border-radius: 4px;
+            letter-spacing: 0.02rem;
+            margin: 0 0.5rem;
+        }
+        a:nth-child(2) {
+            font-family: "DM Sans", sans-serif;
+            color: white;
+            font-weight: bold;
+            padding: 0 1rem;
+            text-decoration: none;
+            padding: 0.75rem 1rem;
+            background-color: black;
+            border: 1px solid black;
+            border-radius: 4px;
+            letter-spacing: 0.02rem;
+            margin: 0 0.5rem;
+        }
+    }
 
 
     .hero-slider {
