--- a/resources/sass/_storefront.scss
+++ b/resources/sass/_storefront.scss
@@ -1,46 +1,42 @@
 #hero {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
     display: flex;
     align-items: center;
-    min-height: 600px;
+    min-height: 700px;
     //background-color: #f2f2f2;
-    background-image: url("/img/bart-hero-bg.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100%;
 
     h1 {
         font-family: 'DM Sans', sans-serif;
-        text-align: center;
+        text-align: left;
         font-weight: bold;
-        font-size: 4rem;
+        font-size: 3.7rem;
         padding-bottom: 1rem;
         letter-spacing: -0.1rem;
+        color: black;
     }
 
     .hero-cta {
 
         display: flex;
         align-items: center;
-        justify-content: center;
+        //justify-content: center;
 
         a:nth-child(1) {
             font-family: "DM Sans", sans-serif;
-            color: #b8b8b8;
-            font-weight: bold;
+            color: black;
             padding: 0 1rem;
             text-decoration: none;
             padding: 0.75rem 1rem;
-            border: 1px solid #b8b8b8;
+            border: 1px solid black;
             border-radius: 4px;
             letter-spacing: 0.02rem;
-            margin: 0 0.5rem;
+            margin-right: 0.5rem;
         }
         a:nth-child(2) {
             font-family: "DM Sans", sans-serif;
             color: white;
-            font-weight: bold;
             padding: 0 1rem;
             text-decoration: none;
             padding: 0.75rem 1rem;
@@ -51,7 +47,6 @@
             margin: 0 0.5rem;
         }
     }
-
 
     .hero-slider {
         min-height: 500px;
@@ -68,6 +63,38 @@
     }
 
 }
+
+#hero-byline {
+    
+    padding: 3rem 0;
+    background-color: black;
+
+    h1 {
+        font-family: 'DM Sans', sans-serif;
+        font-size: 1.5rem;
+        font-weight: bold;
+        margin: 0;
+        color: white;
+    }
+    p {
+        font-family: 'DM Sans', sans-serif;
+        color: white;
+        padding-top: 0.25rem;
+        margin-bottom: 0;
+    }
+    .fa, .fas {
+        font-weight: 900;
+        font-size: 1.5rem;
+        color: white;
+    }
+    .byline-icon {
+        margin: 1rem;
+    }
+    .byline-text {
+        margin-left: 0.8rem;
+    }
+}
+
 
 #prodcat-slider {
 
