--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14286,9 +14286,11 @@ a.text-dark:focus {
 }
 
 #prodcat-slider .cat-selector .cat-item:nth-child(1) {
-  background: pink;
+  background: white;
+  border: 1px solid black;
 }
 
+#prodcat-slider .cat-selector a,
 #prodcat-slider .cat-selector h3 {
   margin-bottom: 0;
   font-family: "DM Sans", sans-serif;
@@ -14312,6 +14314,10 @@ a.text-dark:focus {
   height: auto;
   padding-top: 1rem;
   padding-bottom: 3rem;
+}
+
+#featdeals {
+  padding: 2rem 0;
 }
 
 #featdeals h1 {
@@ -14338,6 +14344,65 @@ a.text-dark:focus {
 #featdeals a:hover {
   color: black;
   transition: all 0.3s;
+}
+
+#featdeals .featured-deals {
+  height: 400px;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
+#about {
+  padding: 2rem 0;
+}
+
+#about h1 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: black;
+}
+
+#about .row {
+  padding-top: 1rem;
+}
+
+#about .row .card {
+  border: 1px solid black;
+}
+
+#about p {
+  font-family: "DM Sans", sans-serif;
+  color: black;
+  margin-bottom: 0;
+}
+
+#about a:hover {
+  color: black;
+  transition: all 0.3s;
+}
+
+#about .about-cta {
+  padding: 2rem;
+}
+
+#about .about-cta p {
+  font-family: "DM Sans", sans-serif;
+  color: black;
+  margin-bottom: 0;
+}
+
+#about .about-cta a {
+  font-family: "DM Sans", sans-serif;
+  color: white;
+  padding: 0 1rem;
+  text-decoration: none;
+  padding: 0.75rem 1rem;
+  background-color: black;
+  border: 1px solid black;
+  border-radius: 4px;
+  letter-spacing: 0.02rem;
+  margin: 0 1rem;
 }
 
 #post {
