--- a/resources/sass/_storefront.scss
+++ b/resources/sass/_storefront.scss
@@ -122,11 +122,12 @@
         }
 
         .cat-item:nth-child(1) {
-            background: pink;
+            background: white;
+            border: 1px solid black;
         }
 
 
-        h3 {
+        a, h3 {
             margin-bottom: 0;
             font-family: 'DM Sans', sans-serif;
             font-weight: 600;
@@ -159,6 +160,7 @@
 }
 
 #featdeals {
+    padding: 2rem 0;
     h1 {
         font-family: 'DM Sans', sans-serif;
         font-weight: 600;
@@ -183,6 +185,67 @@
     a:hover {
         color: black;
         transition: all 0.3s;
+    }
+
+    .featured-deals {
+        height: 400px;
+        border: 1px solid black;
+        border-radius: 4px;
+    }
+}
+ 
+#about {
+
+    padding: 2rem 0;
+
+    h1 {
+        font-family: 'DM Sans', sans-serif;
+        font-weight: 600;
+        font-size: 1.5rem;            
+        color: black;
+    }
+
+    .row {
+        padding-top: 1rem;
+
+        .card {
+            border: 1px solid black;
+        }
+    }
+    
+    p {
+        font-family: 'DM Sans', sans-serif;
+        color: black;
+        margin-bottom: 0;
+    }
+
+    a:hover {
+        color: black;
+        transition: all 0.3s;
+    }
+
+    .about-cta {
+        padding: 2rem;
+
+        p {
+            font-family: 'DM Sans', sans-serif;
+            color: black;
+            margin-bottom: 0;
+        }
+
+        a {
+            font-family: "DM Sans", sans-serif;
+            color: white;
+            padding: 0 1rem;
+            text-decoration: none;
+            padding: 0.75rem 1rem;
+            background-color: black;
+            border: 1px solid black;
+            border-radius: 4px;
+            letter-spacing: 0.02rem;
+            margin: 0 1rem;
+        }
+
     }
 }
  
