--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,6 +18,7 @@
 @import 'nav';
 @import 'storefront';
 @import 'post';
+@import 'categories';
 @import 'register';
 @import 'login';
 @import 'footer';
