--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14457,6 +14457,117 @@ a.text-dark:focus {
   color: #495057;
 }
 
+#categories-hero {
+  padding: 2rem 0;
+}
+
+#categories-hero h1 {
+  font-family: "DM Sans", sans-serif;
+  text-align: left;
+  font-weight: bold;
+  font-size: 3.7rem;
+  padding-bottom: 1rem;
+  letter-spacing: -0.1rem;
+  color: black;
+}
+
+#categories-hero .hero-slider {
+  min-height: auto;
+}
+
+#categories-hero .slick-slide img {
+  border-radius: 4px;
+  width: 100%;
+}
+
+#categories-hero .slick-track {
+  height: 400px;
+}
+
+#categories-menu {
+  padding: 2rem 0;
+  /* Slick Slide */
+  /* Parent Slick Slide */
+}
+
+#categories-menu h1 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: black;
+  padding-bottom: 1rem;
+}
+
+#categories-menu .row .card {
+  background: white;
+  border: 1px solid black;
+  border-radius: 4px;
+  text-align: center;
+  padding: 1.2rem;
+}
+
+#categories-menu .row a,
+#categories-menu .row h3 {
+  margin-bottom: 0;
+  font-family: "DM Sans", sans-serif;
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+#categories-menu .row .fa,
+#categories-menu .row .fas {
+  font-weight: 900;
+  font-size: 1.5rem;
+  padding-bottom: 0.5rem;
+}
+
+#categories-menu .bottom-menu {
+  margin-top: 2rem;
+}
+
+#categories-menu .slick-slide {
+  margin: 0 1rem;
+}
+
+#categories-menu .slick-list {
+  margin: 0 -1rem;
+  height: auto;
+  padding-top: 1rem;
+  padding-bottom: 3rem;
+}
+
+#featdeals {
+  padding: 2rem 0;
+}
+
+#featdeals h1 {
+  font-family: "DM Sans", sans-serif;
+  font-weight: 600;
+  font-size: 1.5rem;
+  color: black;
+  padding-bottom: 1rem;
+}
+
+#featdeals a {
+  font-family: "DM Sans", sans-serif;
+  color: #b8b8b8;
+  margin-bottom: 1rem;
+  padding-left: 1rem;
+  text-align: right !important;
+  text-decoration: none;
+}
+
+#featdeals a:hover {
+  color: black;
+  transition: all 0.3s;
+}
+
+#featdeals .featured-deals {
+  height: 400px;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
 #register {
   display: flex;
   justify-content: center;
