--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14253,7 +14253,7 @@ a.text-dark:focus {
 }
 
 #hero-byline .byline-icon {
-  margin: 1rem;
+  margin-right: 1rem;
 }
 
 #hero-byline .byline-text {
