--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -19,6 +19,7 @@
 @import 'storefront';
 @import 'post';
 @import 'categories';
+@import 'dashboard';
 @import 'register';
 @import 'login';
 @import 'footer';
