--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14278,6 +14278,12 @@ a.text-dark:focus {
   color: #b8b8b8;
 }
 
+#prodcat-slider a {
+  color: black;
+  text-decoration: none;
+  background-color: transparent;
+}
+
 #prodcat-slider .cat-selector .cat-item {
   background: #f2f2f2;
   border-radius: 4px;
@@ -14288,6 +14294,7 @@ a.text-dark:focus {
 #prodcat-slider .cat-selector .cat-item:nth-child(1) {
   background: white;
   border: 1px solid black;
+  color: aqua;
 }
 
 #prodcat-slider .cat-selector a,
@@ -14435,6 +14442,15 @@ a.text-dark:focus {
   border-radius: 4px;
 }
 
+#post .form-control-file {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 4rem;
+  border: 1px solid black;
+  border-radius: 4px;
+}
+
 #post .form-error {
   font-size: 0.65rem;
   padding-top: 0.5rem;
@@ -14566,6 +14582,41 @@ a.text-dark:focus {
   height: 400px;
   border: 1px solid black;
   border-radius: 4px;
+}
+
+#dashboard {
+  padding: 2rem 0;
+  font-family: "DM Sans", sans-serif;
+}
+
+#dashboard .nav {
+  padding-bottom: 2rem;
+}
+
+#dashboard .nav .tab .tablinks {
+  margin-right: 2rem;
+  border: none;
+  background: none;
+  text-align: left;
+  font-weight: bold;
+  letter-spacing: 0.01rem;
+  padding: 0;
+  color: #b8b8b8;
+}
+
+#dashboard .nav .tab .tablinks:hover {
+  color: black;
+  transition: 0.3s;
+}
+
+#dashboard .tabco {
+  border-radius: 4px;
+  border: 1px solid black;
+  padding: 2rem;
+}
+
+#dashboard .tabco h1 {
+  font-weight: bold;
 }
 
 #register {
