--- a/resources/sass/_post.scss
+++ b/resources/sass/_post.scss
@@ -27,6 +27,15 @@
         border-radius: 4px;
     }
 
+    .form-control-file {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 4rem;
+        border: 1px solid black;
+        border-radius: 4px;
+    }
+
     .form-error {
         font-size: 0.65rem;
         padding-top: 0.5rem;
