--- a/resources/sass/_storefront.scss
+++ b/resources/sass/_storefront.scss
@@ -144,6 +144,12 @@
         color: #b8b8b8;
     }
 
+    a {
+        color:black;
+        text-decoration: none;
+        background-color: transparent;
+      }
+
     .cat-selector {
 
         .cat-item {
@@ -156,6 +162,7 @@
         .cat-item:nth-child(1) {
             background: white;
             border: 1px solid black;
+            color: aqua;
         }
 
 
