--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14294,7 +14294,7 @@ a.text-dark:focus {
 #prodcat-slider .cat-selector .cat-item:nth-child(1) {
   background: white;
   border: 1px solid black;
-  color: aqua;
+  color: black;
 }
 
 #prodcat-slider .cat-selector a,
@@ -14323,40 +14323,82 @@ a.text-dark:focus {
   padding-bottom: 3rem;
 }
 
-#featdeals {
+#featured {
   padding: 2rem 0;
 }
 
-#featdeals h1 {
+#featured .col-lg-3 {
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 1rem;
+  margin: 1rem;
+}
+
+#featured .wrapper {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: grid;
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
+#featured .card {
+  border-radius: 4px;
+  margin-bottom: 1rem;
+  background: white;
+  border: 1px solid black;
+}
+
+#featured .card h5 {
+  margin-top: 0.3rem;
+  color: black;
+  font-weight: bold;
+}
+
+#featured .card span {
+  color: black;
+  font-weight: 500;
+  font-family: "DM Sans", sans-serif;
+}
+
+#featured .card .card-top {
+  position: relative;
+}
+
+#featured .card .card-top p {
+  position: absolute;
+  padding: 0.5rem;
+  background-color: black;
+  color: white;
+  border-radius: 4rem;
+  margin: 1rem;
+  font-size: 0.7rem;
+}
+
+#featured .card .card-img-top {
+  border-bottom: 1px solid black;
+}
+
+#featured .card .card-body {
+  padding: 1rem;
+}
+
+#featured h1 {
   font-family: "DM Sans", sans-serif;
   font-weight: 600;
   font-size: 1.5rem;
   color: black;
 }
 
-#featdeals p {
+#featured a {
   font-family: "DM Sans", sans-serif;
-  color: #b8b8b8;
-}
-
-#featdeals a {
-  font-family: "DM Sans", sans-serif;
-  color: #b8b8b8;
+  color: black;
   margin-bottom: 1rem;
-  padding-left: 1rem;
-  text-align: right !important;
   text-decoration: none;
 }
 
-#featdeals a:hover {
-  color: black;
-  transition: all 0.3s;
-}
-
-#featdeals .featured-deals {
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 4px;
+#featured p {
+  font-family: "DM Sans", sans-serif;
+  color: #b8b8b8;
 }
 
 #about {
@@ -14556,6 +14598,47 @@ a.text-dark:focus {
   padding: 2rem 0;
 }
 
+#featured-deals .col-lg-3 {
+  border: 1px solid black;
+  border-radius: 4px;
+  padding: 1rem;
+  margin: 1rem;
+}
+
+#featured-deals .wrapper {
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  display: grid;
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
+#featured-deals .card {
+  border-radius: 4px;
+  margin-bottom: 1rem;
+  background: white;
+  border: 1px solid black;
+}
+
+#featured-deals .card h5 {
+  margin-top: 0.3rem;
+  color: black;
+  font-weight: bold;
+}
+
+#featured-deals .card span {
+  color: black;
+  font-weight: 500;
+  font-family: "DM Sans", sans-serif;
+}
+
+#featured-deals .card .card-img-top {
+  border-bottom: 1px solid black;
+}
+
+#featured-deals .card .card-body {
+  padding: 1rem;
+}
+
 #featured-deals h1 {
   font-family: "DM Sans", sans-serif;
   font-weight: 600;
@@ -14566,22 +14649,9 @@ a.text-dark:focus {
 
 #featured-deals a {
   font-family: "DM Sans", sans-serif;
-  color: #b8b8b8;
-  margin-bottom: 1rem;
-  padding-left: 1rem;
-  text-align: right !important;
-  text-decoration: none;
-}
-
-#featured-deals a:hover {
   color: black;
-  transition: all 0.3s;
-}
-
-#featured-deals .featured-deals {
-  height: 400px;
-  border: 1px solid black;
-  border-radius: 4px;
+  margin-bottom: 1rem;
+  text-decoration: none;
 }
 
 #dashboard {
