--- a/resources/sass/_categories.scss
+++ b/resources/sass/_categories.scss
@@ -87,6 +87,49 @@
 
 #featured-deals {
     padding: 2rem 0;
+
+    .col-lg-3 {
+        border: 1px solid black;
+        border-radius: 4px;
+        padding: 1rem;
+        margin: 1rem;
+    }
+
+    .wrapper {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        display: grid;
+        column-gap: 2rem;
+    }
+
+    .card {
+
+        border-radius: 4px;
+        margin-bottom: 1rem;
+        background: white;
+        border: 1px solid black;
+
+        h5 {
+            margin-top: 0.3rem;
+            color: black;
+            font-weight: bold;
+        }
+
+        span {
+            color: black;
+            font-weight: 500;
+            font-family: 'DM Sans', sans-serif;
+        }
+
+        .card-img-top {
+            border-bottom: 1px solid black;
+        }
+
+        .card-body {
+            padding: 1rem;
+        }
+    }
+
+
     h1 {
         font-family: 'DM Sans', sans-serif;
         font-weight: 600;
@@ -97,23 +140,11 @@
 
     a {
         font-family: 'DM Sans', sans-serif;
-        color: #b8b8b8;
+        color: black;
         margin-bottom: 1rem;
-        padding-left: 1rem;
-        text-align: right !important;
         text-decoration: none;
     }
 
-    a:hover {
-        color: black;
-        transition: all 0.3s;
-    }
-
-    .featured-deals {
-        height: 400px;
-        border: 1px solid black;
-        border-radius: 4px;
-    }
 }
  
 
