--- a/resources/sass/_storefront.scss
+++ b/resources/sass/_storefront.scss
@@ -162,7 +162,7 @@
         .cat-item:nth-child(1) {
             background: white;
             border: 1px solid black;
-            color: aqua;
+            color: black;
         }
 
 
@@ -198,39 +198,119 @@
 
 }
 
-#featdeals {
+// #featdeals {
+//     padding: 2rem 0;
+//     h1 {
+//         font-family: 'DM Sans', sans-serif;
+//         font-weight: 600;
+//         font-size: 1.5rem;            
+//         color: black;
+//     }
+    
+//     p {
+//         font-family: 'DM Sans', sans-serif;
+//         color: #b8b8b8;
+//     }
+
+//     a {
+//         font-family: 'DM Sans', sans-serif;
+//         color: #b8b8b8;
+//         margin-bottom: 1rem;
+//         padding-left: 1rem;
+//         text-align: right !important;
+//         text-decoration: none;
+//     }
+
+//     a:hover {
+//         color: black;
+//         transition: all 0.3s;
+//     }
+
+//     .featured-deals {
+//         height: 400px;
+//         border: 1px solid black;
+//         border-radius: 4px;
+//     }
+// }
+
+#featured {
     padding: 2rem 0;
+
+    .col-lg-3 {
+        border: 1px solid black;
+        border-radius: 4px;
+        padding: 1rem;
+        margin: 1rem;
+    }
+
+    .wrapper {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        display: grid;
+        column-gap: 2rem;
+    }
+
+    .card {
+
+        border-radius: 4px;
+        margin-bottom: 1rem;
+        background: white;
+        border: 1px solid black;
+
+        h5 {
+            margin-top: 0.3rem;
+            color: black;
+            font-weight: bold;
+        }
+
+        span {
+            color: black;
+            font-weight: 500;
+            font-family: 'DM Sans', sans-serif;
+        }
+
+        .card-top {
+            position: relative;
+
+            p {
+                position: absolute;
+                padding: 0.5rem;
+                background-color: black;
+                color: white;
+                border-radius: 4rem;
+                margin: 1rem;
+                font-size: 0.7rem;
+            }
+        }
+
+        .card-img-top {
+            border-bottom: 1px solid black;
+        }
+
+        .card-body {
+            padding: 1rem;
+        }
+    }
+
+
     h1 {
         font-family: 'DM Sans', sans-serif;
         font-weight: 600;
         font-size: 1.5rem;            
         color: black;
     }
-    
+
+    a {
+        font-family: 'DM Sans', sans-serif;
+        color: black;
+        margin-bottom: 1rem;
+        text-decoration: none;
+    }
+
     p {
         font-family: 'DM Sans', sans-serif;
         color: #b8b8b8;
     }
 
-    a {
-        font-family: 'DM Sans', sans-serif;
-        color: #b8b8b8;
-        margin-bottom: 1rem;
-        padding-left: 1rem;
-        text-align: right !important;
-        text-decoration: none;
-    }
-
-    a:hover {
-        color: black;
-        transition: all 0.3s;
-    }
-
-    .featured-deals {
-        height: 400px;
-        border: 1px solid black;
-        border-radius: 4px;
-    }
 }
  
 #about {
