--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14369,8 +14369,8 @@ a.text-dark:focus {
   padding: 0.5rem;
   background-color: black;
   color: white;
-  border-radius: 4rem;
-  margin: 1rem;
+  border-radius: 4px;
+  margin: 0.8rem;
   font-size: 0.7rem;
 }
 
