--- a/resources/sass/_storefront.scss
+++ b/resources/sass/_storefront.scss
@@ -276,8 +276,8 @@
                 padding: 0.5rem;
                 background-color: black;
                 color: white;
-                border-radius: 4rem;
-                margin: 1rem;
+                border-radius: 4px;
+                margin: 0.8rem;
                 font-size: 0.7rem;
             }
         }
