--- a/resources/sass/_storefront.scss
+++ b/resources/sass/_storefront.scss
@@ -64,38 +64,6 @@
 
 }
 
-// @media only screen and (min-width: 600px) {
-
-//     #hero {
-
-//         min-height: 100vh;
-//         padding: 1rem 0;
-
-//         h1 {
-//             text-align: center;
-//             font-size: 3.5rem;
-//         }
-    
-//         .hero-cta {
-    
-//             display: flex;
-//             align-items: center;
-//             justify-content: center;
-    
-//             a:nth-child(1) {
-//                 margin: 0.5rem;
-//             }
-//             a:nth-child(2) {
-//                 margin: 0.5rem;
-//             }
-//         }
-
-//         img {
-//             padding: 2rem;
-//         }
-//     }
-// }
-
 #hero-byline {
     
     padding: 3rem 0;
@@ -367,7 +335,38 @@
 
     }
 }
- 
+
+// @media (min-width: 771px) {
+
+//     #hero {
+
+//         min-height: 100vh;
+//         padding: 1rem 0;
+
+//         h1 {
+//             text-align: center;
+//             font-size: 3.5rem;
+//         }
+    
+//         .hero-cta {
+    
+//             display: flex;
+//             align-items: center;
+//             justify-content: center;
+    
+//             a:nth-child(1) {
+//                 margin: 0.5rem;
+//             }
+//             a:nth-child(2) {
+//                 margin: 0.5rem;
+//             }
+//         }
+
+//         img {
+//             padding: 2rem;
+//         }
+//     }
+// }
 
 
 
