--- a/resources/sass/_post.scss
+++ b/resources/sass/_post.scss
@@ -5,7 +5,18 @@
     h2 {
         font-weight: 600;
         text-align: center;
-        margin: 2rem 0;
+        margin-top: 2rem;
+        margin-bottom: 0.5rem;
+    }
+
+    p {
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    .fa, .fas {
+        padding-right: 0.4rem;
+        font-size: 0.7rem;
     }
 
     .disclaimer {
@@ -51,6 +62,7 @@
         margin-top: 1rem;
         background-color: black;
         border: 1px black solid;
+        width: 100%;
     }
 
     .checkterms {
@@ -58,3 +70,16 @@
         color: #495057;
     }
 }
+
+
+  @media (max-width: 771px) {
+
+    #post {
+        padding: 2rem 1rem;
+        h2 {
+            font-size: 1.5rem;
+            margin-top: 0;
+        }
+    }
+    
+  }
