--- a/resources/sass/_storefront.scss
+++ b/resources/sass/_storefront.scss
@@ -161,45 +161,8 @@
         padding-top: 1rem;
         padding-bottom: 3rem;
     }
-
-
-
 }
 
-// #featdeals {
-//     padding: 2rem 0;
-//     h1 {
-//         font-family: 'DM Sans', sans-serif;
-//         font-weight: 600;
-//         font-size: 1.5rem;            
-//         color: black;
-//     }
-    
-//     p {
-//         font-family: 'DM Sans', sans-serif;
-//         color: #b8b8b8;
-//     }
-
-//     a {
-//         font-family: 'DM Sans', sans-serif;
-//         color: #b8b8b8;
-//         margin-bottom: 1rem;
-//         padding-left: 1rem;
-//         text-align: right !important;
-//         text-decoration: none;
-//     }
-
-//     a:hover {
-//         color: black;
-//         transition: all 0.3s;
-//     }
-
-//     .featured-deals {
-//         height: 400px;
-//         border: 1px solid black;
-//         border-radius: 4px;
-//     }
-// }
 
 #featured {
     padding: 2rem 0;
@@ -336,221 +299,95 @@
     }
 }
 
-// @media (min-width: 771px) {
+@media (max-width: 771px) {
 
-//     #hero {
+    #hero {
+        min-height: 100vh;
+        padding: 2rem 0;
 
-//         min-height: 100vh;
-//         padding: 1rem 0;
-
-//         h1 {
-//             text-align: center;
-//             font-size: 3.5rem;
-//         }
+        h1 {
+            text-align: center;
+            font-size: 3rem;
+        }
+        .hero-cta {
     
-//         .hero-cta {
+            display: flex;
+            align-items: center;
+            justify-content: center;
     
-//             display: flex;
-//             align-items: center;
-//             justify-content: center;
+            a:nth-child(1) {
+                margin: 0.5rem;
+                padding: 0.8rem;
+            }
+            a:nth-child(2) {
+                margin: 0.5rem;
+                padding: 0.8rem;
+            }
+        }
+        img {
+            padding: 2rem;
+        }
+    }
+
+    #hero-byline {
     
-//             a:nth-child(1) {
-//                 margin: 0.5rem;
-//             }
-//             a:nth-child(2) {
-//                 margin: 0.5rem;
-//             }
-//         }
+        padding: 2rem;
+        background-color: black;
 
-//         img {
-//             padding: 2rem;
-//         }
-//     }
-// }
+        .d-flex {
+            display: none;
+        }
+    
+        h1 {
+            font-size: 1.25rem;
 
+        }
+        p {
+            font-family: 'DM Sans', sans-serif;
+            color: white;
+            padding-top: 0.25rem;
+            margin-bottom: 0;
+        }
+        .fa, .fas {
+            font-weight: 900;
+            font-size: 1.5rem;
+            color: white;
+        }
+        .byline-icon {
+            margin-right: 1rem;
+        }
+        .byline-text {
+            margin-left: 0.8rem;
+        }
+    }
 
+    #about {
 
-
-
-// #prod-cats {
-
-//     padding: 2rem 0;
-
-//     h1 {
+        padding: 1rem;
+    
+        h1 {
+            font-size: 1.25rem;
+            text-align: center;           
+        }
+    
+        .row {
+            padding-top: 1rem;
+    
+            .card {
+                margin-bottom: 1.5rem;
+            }
+        }
         
-//     font-family: "Epilogue", sans-serif;
-//     color: black;
-//     font-size: 24px;
-//     font-weight: bold;
-//     }
-
+        .about-cta {
+            padding: 0;
     
+            a {
+                width: 100%;
+                margin: 0;
+                text-align: center;
+                margin-bottom: 1rem;
+            }
+        }
+    }
 
-//     .cat-selector {
-//         background-color: white;
-//         min-height: auto;
-//     }
-
-
-// }
-
-
-// .slick-initialized .slick-slide .cat-item {
-//     width: 100%;
-//     display: inline-block;
-//     background: aquamarine;
-//     height: 150px;
-//     border-radius: 4px;
-//     transition: 0.25s;
-//     -webkit-box-shadow: 0px 11px 27px 4px rgba(0,0,0,0.25); 
-//     box-shadow: 0px 9px 15px 0px rgb(0 0 0 / 14%);
-
-//     img {
-//         border-radius: 4px;
-//     }
-// }
-
-
-
-// .without >.cat-item{
-//     display: inline-block;
-//     float: left;
-//     width: 100%;
-//   }
-  
-//       .cat-item:hover{
-//           transform: scale(1.2);
-//       }
-
-
-// #feat-items {
-
-//     padding-bottom: 2rem;
-
-//     .product-categories {
-//         border: 1px solid black;
-//         border-radius: 5px;
-//         margin-top: 2rem;
-//         padding: 1rem;
-//     }
-
-//     .featured-header {
-//         margin-top: 2rem;
-//         padding-bottom: 2rem;
-//     }
-
-
-//     h4 {
-//         font-family: 'Epilogue', sans-serif;
-//         color: black;
-//         font-size: 24px;
-//         font-weight: bold;
-//     }
-
-//     a {
-//         font-family: 'Epilogue', sans-serif;
-//         color: #9e9e9e;
-//         float: right;
-//         text-align: right;
-//         padding-left: 3rem;
-//     } 
-
-//     .grid {
-//         .card {
-
-//             background-color: transparent;
-//             border: 1px solid black;
-
-//             p {
-//                 font-family: 'Epilogue', sans-serif;
-//                 color: black;
-//                 margin-bottom: 0.1rem;
-//                 font-size: 12px;
-//             }
-
-//             h6 {
-//                 font-family: 'Epilogue', sans-serif;
-//                 color: white;
-//                 margin-bottom: 0.1rem;
-//                 font-size: 12px;
-//             }
-
-//             h5 {
-//                 font-family: 'Epilogue', sans-serif;
-//                 color: black;
-//                 font-size: 22px;
-//                 font-weight: bold;
-//                 margin-bottom: 0;
-//             }
-
-//             .badge {
-//                 float: right;
-//                 background: rgb(214,12,209);
-//                 background: linear-gradient(22deg, rgba(214,12,209,1) 0%, rgba(255,94,0,1) 100%);
-//                 position: absolute;
-//                 padding: 0.7rem;
-//                 margin: 1.25rem;
-//             }
-//         }
-
-//         .row:nth-child(1) {
-//             margin-bottom: 2rem;
-//         }
-
-//         button {
-//             color: white;
-//             width: 100%;
-//             border: 1px solid black;
-//             font-family: "Epilogue", sans-serif;
-//             padding: 0.5rem;
-//             background: black;
-//             margin-top: 2rem;
-//         }
-//     }
-
-// }
-
-// #short-info {
-
-//     padding: 2rem 0;
-
-//     .wrapper {
-//         display: grid;
-//         grid-template-columns: 1fr 1fr 1fr;
-//         column-gap: 1.5rem;
-//         font-family: 'Epilogue', sans-serif;
-//         color: white;
-
-//         h1 {
-//             font-size: 2rem;
-//             font-weight: bold;
-//         }
-
-//         p {
-//             font-size: 0.9rem;
-//             font-weight: lighter;
-//             margin: 0;
-//         }
-
-//         .deal {
-//             padding: 2rem;
-//             background-color: #CC0542;
-//             border-radius: 4px;
-//         }
-
-//         .match {
-//             padding: 2rem;
-//             background-color: #FFA20F;
-//             border-radius: 4px;
-//         }
-
-//         .trade {
-//             padding: 2rem;
-//             background-color: #3CB4FF;
-//             border-radius: 4px;
-//         }
-//     }
-
-
-
-// }
+}
