--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14750,6 +14750,20 @@ a.text-dark:focus {
   font-family: "DM Sans", sans-serif;
 }
 
+#featured-deals .card .card-top {
+  position: relative;
+}
+
+#featured-deals .card .card-top p {
+  position: absolute;
+  padding: 0.5rem;
+  background-color: black;
+  color: white;
+  border-radius: 4px;
+  margin: 0.8rem;
+  font-size: 0.7rem;
+}
+
 #featured-deals .card .card-img-top {
   border-bottom: 1px solid black;
 }
@@ -14996,5 +15010,105 @@ footer p {
   float: right;
   text-align: right;
   padding-left: 1.8rem;
+}
+
+.single-product {
+  padding: 2rem 0;
+  background: white;
+}
+
+.single-product h1,
+.single-product p {
+  margin: 0;
+}
+
+.single-product .col-lg-8 {
+  background-color: grey;
+  min-height: 400px;
+  padding: 2rem;
+  border-radius: 6px 0 0 6px;
+  background-image: url(https://images.unsplash.com/photo-1490644120458-f5e5c71d2ab0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80);
+  background-position: center;
+  background-size: cover;
+}
+
+.single-product .col-lg-8 p {
+  padding: 0.5rem;
+  background: #d60cd1;
+  background: linear-gradient(22deg, #d60cd1 0%, #ff5e00 100%);
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  border-radius: 5px;
+  color: white;
+  font-family: "DM Sans", sans-serif;
+  font-weight: bold;
+}
+
+.single-product .col-lg-4 {
+  min-height: 400px;
+  padding: 2rem;
+  border: 1px solid black;
+  border-radius: 0 6px 6px 0;
+}
+
+.single-product .col-lg-4 h1 {
+  font-family: "DM Sans", sans-serif;
+  color: black;
+  font-size: 32px;
+  margin-bottom: 1rem;
+}
+
+.single-product .col-lg-4 h3 {
+  font-family: "DM Sans", sans-serif;
+  color: #a3a3a3;
+  font-size: 14px;
+  padding: 0.5rem 0;
+}
+
+.single-product .col-lg-4 p {
+  font-family: "DM Sans", sans-serif;
+  color: black;
+  font-size: 14px;
+  line-height: 1.7rem;
+  margin-bottom: 1rem;
+}
+
+.single-product .col-lg-4 .user-offers input[type=text] {
+  margin-top: 2rem;
+  width: 100%;
+  height: 6rem;
+  border-radius: 5px;
+  border: 1px solid transparent;
+  background: #e8e8e8;
+  padding: 1rem;
+  font-family: "DM Sans", sans-serif;
+}
+
+.single-product .col-lg-4 .user-offers button {
+  width: 100%;
+  border-radius: 5px;
+  border: 1px solid black;
+  background-color: black;
+  color: white;
+  margin-top: 1rem;
+  font-family: "Epilogue", sans-serif;
+}
+
+.single-product .col-lg-4 .looking {
+  padding: 1rem;
+  border: 1px solid #ff5e00;
+  border-radius: 5px;
+}
+
+.single-product .col-lg-4 .looking h2 {
+  font-family: "DM Sans", sans-serif;
+  color: #ff5e00;
+  font-size: 22px;
+  margin-bottom: 0.5rem;
+}
+
+.single-product .col-lg-4 .looking p {
+  margin-bottom: 0;
 }
 
