--- a/resources/sass/_categories.scss
+++ b/resources/sass/_categories.scss
@@ -120,6 +120,20 @@
             font-family: 'DM Sans', sans-serif;
         }
 
+        .card-top {
+            position: relative;
+
+            p {
+                position: absolute;
+                padding: 0.5rem;
+                background-color: black;
+                color: white;
+                border-radius: 4px;
+                margin: 0.8rem;
+                font-size: 0.7rem;
+            }
+        }
+
         .card-img-top {
             border-bottom: 1px solid black;
         }
