--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14520,6 +14520,84 @@ a.text-dark:focus {
     margin-left: 0.8rem;
   }
 
+  #featured {
+    padding: 1rem;
+  }
+
+  #featured .col-lg-3 {
+    border: 1px solid black;
+    border-radius: 4px;
+    padding: 1rem;
+    margin: 1rem;
+  }
+
+  #featured .wrapper {
+    grid-template-columns: 1fr;
+    display: grid;
+    -moz-column-gap: 1rem;
+         column-gap: 1rem;
+  }
+
+  #featured .card {
+    border-radius: 4px;
+    margin-bottom: 1rem;
+    background: white;
+    border: 1px solid black;
+  }
+
+  #featured .card h5 {
+    margin-top: 0.3rem;
+    color: black;
+    font-weight: bold;
+  }
+
+  #featured .card span {
+    color: black;
+    font-weight: 500;
+    font-family: "DM Sans", sans-serif;
+  }
+
+  #featured .card .card-top {
+    position: relative;
+  }
+
+  #featured .card .card-top p {
+    position: absolute;
+    padding: 0.5rem;
+    background-color: black;
+    color: white;
+    border-radius: 4px;
+    margin: 0.8rem;
+    font-size: 0.7rem;
+  }
+
+  #featured .card .card-img-top {
+    border-bottom: 1px solid black;
+  }
+
+  #featured .card .card-body {
+    padding: 1rem;
+  }
+
+  #featured h1 {
+    font-family: "DM Sans", sans-serif;
+    font-weight: 600;
+    font-size: 1.5rem;
+    color: black;
+  }
+
+  #featured a {
+    font-family: "DM Sans", sans-serif;
+    color: black;
+    margin-bottom: 1rem;
+    text-decoration: none;
+  }
+
+  #featured p {
+    font-family: "DM Sans", sans-serif;
+    color: #b8b8b8;
+  }
+
   #about {
     padding: 1rem;
   }
