--- a/resources/sass/_storefront.scss
+++ b/resources/sass/_storefront.scss
@@ -361,6 +361,86 @@
         }
     }
 
+    #featured {
+        padding: 1rem;
+    
+        .col-lg-3 {
+            border: 1px solid black;
+            border-radius: 4px;
+            padding: 1rem;
+            margin: 1rem;
+        }
+    
+        .wrapper {
+            grid-template-columns: 1fr;
+            display: grid;
+            column-gap: 1rem;
+        }
+    
+        .card {
+    
+            border-radius: 4px;
+            margin-bottom: 1rem;
+            background: white;
+            border: 1px solid black;
+    
+            h5 {
+                margin-top: 0.3rem;
+                color: black;
+                font-weight: bold;
+            }
+    
+            span {
+                color: black;
+                font-weight: 500;
+                font-family: 'DM Sans', sans-serif;
+            }
+    
+            .card-top {
+                position: relative;
+    
+                p {
+                    position: absolute;
+                    padding: 0.5rem;
+                    background-color: black;
+                    color: white;
+                    border-radius: 4px;
+                    margin: 0.8rem;
+                    font-size: 0.7rem;
+                }
+            }
+    
+            .card-img-top {
+                border-bottom: 1px solid black;
+            }
+    
+            .card-body {
+                padding: 1rem;
+            }
+        }
+    
+    
+        h1 {
+            font-family: 'DM Sans', sans-serif;
+            font-weight: 600;
+            font-size: 1.5rem;            
+            color: black;
+        }
+    
+        a {
+            font-family: 'DM Sans', sans-serif;
+            color: black;
+            margin-bottom: 1rem;
+            text-decoration: none;
+        }
+    
+        p {
+            font-family: 'DM Sans', sans-serif;
+            color: #b8b8b8;
+        }
+    
+    }
+
     #about {
 
         padding: 1rem;
