--- a/public/css/app.css
+++ b/public/css/app.css
@@ -14625,6 +14625,34 @@ a.text-dark:focus {
     text-align: center;
     margin-bottom: 1rem;
   }
+
+  .cat-selector .cat-item {
+    background: #f2f2f2;
+    border-radius: 4px;
+    text-align: center;
+    padding: 2rem;
+  }
+
+  .cat-selector .cat-item:nth-child(1) {
+    background: white;
+    border: 1px solid black;
+    color: black;
+  }
+
+  .cat-selector a,
+  .cat-selector h3 {
+    margin-bottom: 0;
+    font-family: "DM Sans", sans-serif;
+    font-weight: 600;
+    font-size: 0.6rem;
+  }
+
+  .cat-selector .fa,
+  .cat-selector .fas {
+    font-weight: 900;
+    font-size: 1.25rem;
+    padding-bottom: 0.5rem;
+  }
 }
 
 #post {
