--- a/resources/sass/_storefront.scss
+++ b/resources/sass/_storefront.scss
@@ -470,4 +470,35 @@
         }
     }
 
+    .cat-selector {
+
+        .cat-item {
+            background: #f2f2f2;
+            border-radius: 4px;
+            text-align: center;
+            padding: 2rem;
+        }
+
+        .cat-item:nth-child(1) {
+            background: white;
+            border: 1px solid black;
+            color: black;
+        }
+
+
+        a, h3 {
+            margin-bottom: 0;
+            font-family: 'DM Sans', sans-serif;
+            font-weight: 600;
+            font-size: 0.6rem;
+        }
+
+        .fa, .fas {
+            font-weight: 900;
+            font-size: 1.25rem;
+            padding-bottom: 0.5rem;
+        }
+
+    }
+
 }
